apps/backend-stack/base/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
    app.kubernetes.io/name: todo-notification
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: todo-notification
    tags.datadoghq.com/version: v0.0.1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      annotations:
        admission.datadoghq.com/enabled: "true"
        admission.datadoghq.com/js-lib.version: "5"
      labels:
        app: notification
        app.kubernetes.io/name: todo-notification
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: todo-notification
        tags.datadoghq.com/version: v0.0.1
    spec:
      containers:
        - name: notification
          image: ghcr.io/shynsg/todo-notification:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
