apps/backend-stack/base/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - name: http
      port: 3001
      targetPort: http
