apps/backend-stack/base/rabbitmq-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: management
      port: 15672
      targetPort: management
      nodePort: 31672
